Removing unrecognized VM option