@@ -728,7 +728,7 @@
                             <!-- Integration tests are run using the fail-safe plugin in the module
                                 pom -->
                             <useSystemClassLoader>false</useSystemClassLoader>
-                            <argLine>-Xmx1024m -XX:MaxPermSize=256m
+                            <argLine>-Xmx1024m
                                 -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar
                             </argLine>
 
